ingress/adminer-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
#  namespace: kube-system
  name: adminer
  labels:
    app: v
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
#  namespace: kube-system
  name: adminer-service # a random name
spec:
  selector:  # to connect to Pod through label
    app: adminer
  ports:
    - port: 80  # service port
      protocol: TCP
      targetPort: 8080  # container port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adminer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #ingress.kubernetes.io/rewrite-target: /
#  namespace: kube-system
spec:
  rules:
    - host: adminer-ingress.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: adminer-service
              servicePort: 80
