ingress/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  namespace: kube-system
spec:
  rules:
    - host: kubernetes-dashboard.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
