ingress/grafana-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  namespace: monitoring
spec:
  tls:
    - hosts:
        - grafana.airlan.cv.ua
      secretName: default-tls-secret
  rules:
    - host: grafana.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
