ingress/nginx-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
#  namespace: kube-system
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.16
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
#  namespace: kube-system
  name: nginx-service # a random name
spec:
  selector:  # to connect to Pod through label
    app: nginx
  ports:
    - port: 80  # service port
      protocol: TCP
      targetPort: 80  # container port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #ingress.kubernetes.io/rewrite-target: /
#  namespace: kube-system
spec:
  tls:
    - hosts:
        - nginx-ingress.airlan.cv.ua
      secretName: default-tls-secret
  rules:
    - host: nginx-ingress.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
