ingress/portainer-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portainer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  namespace: portainer
spec:
  tls:
    - hosts:
        - portainer.airlan.cv.ua
      secretName: default-tls-secret
  rules:
    - host: portainer.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: portainer
              servicePort: 9000
